<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Niania</string>
    <string name="action_settings">Opcje</string>
    <string name="useAsParentDevice">Użyj jako odbiornik (Rodzic)</string>
    <string name="useAsChildDevice">Użyj jako nadajnik (Dziecko)</string>
    <string name="childDescription">Urządzenie znajduje się przy dziecku i transmituje dane do odbiornika ...</string>
    <string name="parentDescription">łączy się z nadajnikiem i transmituje dane ...</string>
    <string name="childDevice">Urządzenie (Dziecko)</string>
    <string name="serviceTitle">Serwis:</string>
    <string name="serviceDescription">Nazwa serwisu, z którym odbiornik musi się połączyć</string>
    <string name="loading">Wczytywanie...</string>
    <string name="stopped">Zatrzymano</string>
    <string name="streaming">Transmitowanie...</string>
    <string name="waitingForParent">Oczekiwanie na odbiornik...</string>
    <string name="parentDevice">Urządzenie Odbiornik</string>
    <string name="selectChildDevice">Wybierz nadajnik (Dziecko):</string>
    <string name="status">Status:</string>
    <string name="connectedTo">Połączone z:</string>
    <string name="disconnected">Rozłączono</string>
    <string name="listening">Nasłuchiwanie...</string>
    <string name="addressTitle">IP:</string>
    <string name="portTitle">Port:</string>
    <string name="addressDescription">IP i adres, z którym odbiornik musi się połączyć</string>
    <string name="wifiNotConnected">Brak połącznia z siecią Wi-Fi</string>
    <string name="enterAddressInstructions">Wprowadz IP oraz port nadajnika i kliknij połącz</string>
    <string name="connect">Połącz</string>
    <string name="exampleAddress">192.168.1.2</string>
    <string name="examplePort">10000</string>
    <string name="invalidPort">Port nie został podany lub jest nieprawidłowy</string>
    <string name="invalidAddress">Pole IP musi zostać wypełnione</string>
    <string name="discoverChild">Wykryj nadajnik</string>
    <string name="discoverChildDescription">Wybierz nadajnik z listy wykrytych w sieci</string>
    <string name="enterChildAddress">Wybierz nadajnik po IP</string>
    <string name="enterChildAddressDescription">Wprowadz IP oraz port nadajnika</string>
    <string name="settings">Opcje</string>
    <string name="settingsDescription">Ustawienie numeru telefonu do kontaktu, czułości urządzenia na dzwięki otoczenia oraz formy kontaktu podczas przekroczenia wybranej normy</string>
    <string name="sms">Sms</string>
    <string name="zadzwon">Zadzwoń</string>
    <string name="start">Start</string>
    <string name="opcje_hint"><b><u>Wprowadz numer kontaktowy</u></b></string>
    <string name="czulosc"><b>Czułość na dźwięki</b></string>
    <string name="seekbarValue">75%</string>

    <string name="activity_ipcam_default">Default</string>
    <string name="activity_ipcam_two">Two Camera</string>
    <string name="activity_ipcam_native">Native</string>
    <string name="activity_settings">Settings</string>

    <string name="button_default">Default</string>
    <string name="button_two_camera">Two Camera</string>
    <string name="button_native">Native</string>
    <string name="button_settings">Settings</string>

<string name="textView_version">lib v0.4.0</string>

<string name="pref_header_general">General</string>
<string name="pref_header_authentication">Authentication</string>

<string name="pref_title_ipcam_url">Url</string>
<string name="pref_default_ipcam_url">http://plazacam.studentaffairs.duke.edu/mjpg/video.mjpg</string>

<string name="pref_title_authentication">Use credentials</string>
<string name="pref_title_authentication_username">Username</string>
<string name="pref_title_authentication_password">Password</string>

<string name="pref_hidden_password">&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;</string>

    </resources>
