<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context="mgr.niania.SettingsActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/czulosc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/czulosc"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/czulosc_text"
        android:progress="50"
        android:splitTrack="false"
        android:layout_marginTop="15dp"
        android:onClick="saveState"/>
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar"
        android:gravity="center"
        android:id="@+id/seekbar_value"
        android:text="@string/seekbarValue"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <AutoCompleteTextView
        android:id="@+id/telefon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/opcje_hint"
        android:inputType="phone"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:layout_below="@id/seekbar_value"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        />

    <Space
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefon"
        android:text="@string/sms"
        android:checked="true"
        android:id="@+id/checkboxSMS"
        android:textStyle="bold"
        android:onClick="saveState"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telefon"
        android:text="@string/zadzwon"
        android:checked="false"
        android:id="@+id/checkboxCall"
        android:textStyle="bold"
        android:onClick="saveState"
        android:layout_weight="0.05"/>

    <Space
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/settingsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsDescription"
        android:textSize="14sp" />

    <Space
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/settingsButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="17sp"
        android:background="@drawable/buttons_main"
        android:layout_marginTop="25dp"
        />

</LinearLayout>