<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context="mgr.niania.StartActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/logo"
        android:layout_weight="0.42" />

    <Button
        android:id="@+id/useChildDevice"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useAsChildDevice"
        android:textSize="17sp"
        android:background="@drawable/buttons_main"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/childDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/childDescription"
        android:textSize="14sp" />

	<Space
	   android:layout_width="match_parent"
	   android:layout_height="15dip" />

    <Button
        android:id="@+id/useParentDevice"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useAsParentDevice"
        android:textSize="17sp"
        android:background="@drawable/buttons_main"/>

    <TextView
        android:id="@+id/parentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parentDescription" />

</LinearLayout>
