<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:stream="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_gradient"
    tools:context="mgr.niania.ListenActivity"
    android:weightSum="1">

    <TextView
        android:id="@id/parentDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/parentDevice"
        android:textSize="25sp" />

    <Space
       android:layout_width="match_parent"
       android:layout_height="15dip" />

    <TextView
        android:id="@+id/connectedToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectedTo"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/connectedTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />

    <Space
       android:layout_width="match_parent"
       android:layout_height="15dip" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />



    <com.github.niqdev.mjpeg.MjpegSurfaceView
        android:id="@+id/mjpegViewDefault"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        stream:type="stream_default"
        android:layout_weight="0.22"
        />

</LinearLayout>